--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@google/clasp": "^1.5.3",
     "@types/google-apps-script": "^0.0.27",
+    "gas-webpack-plugin": "^0.3.0",
     "ts-loader": "^4.5.0",
     "typescript": "^3.0.1",
     "webpack": "^4.16.5"
